--- a/gc/fcf.form.htm
+++ b/gc/fcf.form.htm
@@ -75,3 +75,35 @@
 
 </body>
 </html>
+
+
+
+
+
+<form id="contactForm" data-toggle="validator" data-focus="false" action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
+    <div class="form-group">
+        <input type="text" class="form-control-input" id="cname" required>
+        <label class="label-control" for="cname">Name</label>
+        <div class="help-block with-errors"></div>
+    </div>
+    <div class="form-group">
+        <input type="email" class="form-control-input" id="cemail" required>
+        <label class="label-control" for="cemail">Email</label>
+        <div class="help-block with-errors"></div>
+    </div>
+    <div class="form-group">
+        <textarea class="form-control-textarea" id="cmessage" required></textarea>
+        <label class="label-control" for="cmessage">Your message</label>
+        <div class="help-block with-errors"></div>
+    </div>
+    <div class="form-group checkbox">
+        <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>I agree with Games Converse's stated <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-conditions.html">Terms Conditions</a> 
+        <div class="help-block with-errors"></div>
+    </div>
+    <div class="form-group">
+        <button type="submit" class="form-control-submit-button">SUBMIT MESSAGE</button>
+    </div>
+    <div class="form-message">
+        <div id="cmsgSubmit" class="h3 text-center hidden"></div>
+    </div>
+</form>
