--- a/gc/index.html
+++ b/gc/index.html
@@ -1028,7 +1028,7 @@
                                     </div>
                                     <!-- You MUST retain the attribution below -->
                                     <div class="fcf-attribution">Contact Form by <a href="https://www.freecontactform.com/"
-                                            class="fcf-attribution-link">FreeContactForm</a></div>
+                                            class="fcf-attribution-link" style="font-size: small;">FreeContactForm</a></div>
                                 </form>
                             </div>
                             <div id="fcf-thank-you" style="display:none">
