--- a/gc/index.html
+++ b/gc/index.html
@@ -987,7 +987,7 @@
               
 
 <!-- form.123formbuilder.com script begins here -->
-<iframe allowTransparency="true" style="min-height:300px; height:inherit; overflow:auto;" width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="https://form.123formbuilder.com/my-contact-form-5852630.html"><p>Your browser does not support iframes. The contact form cannot be displayed. Please use another contact method (phone, fax etc)</p></iframe>
+<script type="text/javascript" defer src="https://form.123formbuilder.com/embed/5852682.js?type=lightbox" data-role="form" data-default-width="650px"data-embed-type="lightbox-text-link" data-embed-text-link="Contact us"></script>
 <!-- form.123formbuilder.com script ends here -->
 
 
