--- a/gc/index.html
+++ b/gc/index.html
@@ -986,10 +986,8 @@
                     
               
 
-<!-- form.123formbuilder.com script begins here -->
-<script type="text/javascript" defer src="https://form.123formbuilder.com/embed/5852682.js?type=lightbox" data-role="form" data-default-width="650px"data-embed-type="lightbox-text-link" data-embed-text-link="Contact us"></script>
+<!-- form.123formbuilder.com script begins here --><script type="text/javascript" defer src="https://form.123formbuilder.com/embed/5852682.js" data-role="form" data-default-width="650px"></script>
 <!-- form.123formbuilder.com script ends here -->
-
 
 
                 </div> <!-- end of col -->
