--- a/gc/index.html
+++ b/gc/index.html
@@ -119,7 +119,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-container">
-                            <h1>BUSINESS <span id="js-rotating">TEMPLATE, SERVICES, SOLUTIONS</span></h1>
+                            <h1>GAMES CONVERSE is <span id="js-rotating">a gaming HUB,an APP full of fun awareness driven,a way to change the world!</span></h1>
                             <p class="p-heading p-large">Aria is a top consultancy company specializing in business growth using online marketing and conversion optimization tactics</p>
                             <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
                         </div>
@@ -986,7 +986,8 @@
                     
               
 
-<!-- form.123formbuilder.com script begins here --><script type="text/javascript" defer src="https://form.123formbuilder.com/embed/5852682.js" data-role="form" data-default-width="650px"></script>
+<!-- CONTACT FORM -->
+<script type="text/javascript" defer src="https://form.123formbuilder.com/embed/5852682.js" data-role="form" data-default-width="650px"></script>
 <!-- form.123formbuilder.com script ends here -->
 
 
@@ -1003,7 +1004,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="text-container about">
-                        <h4>Few Words About Aria</h4>
+                        <h4>Few Words About Games Converse/h4>
                         <p class="white">We're passionate about delivering the best business growth services for companies just starting out as startups or industry players that have established their market position a long tima ago.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
