--- a/gc/index.html
+++ b/gc/index.html
@@ -119,7 +119,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-container">
-                            <h1>GAMES CONVERSE is <span id="js-rotating">a gaming HUB,an APP full of fun awareness driven,a way to change the world!</span></h1>
+                            <h1>GAMES CONVERSE is <span id="js-rotating">an APP,gaming HUB,hope.</span></h1>
                             <p class="p-heading p-large">Aria is a top consultancy company specializing in business growth using online marketing and conversion optimization tactics</p>
                             <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
                         </div>
