--- a/gc/index.html
+++ b/gc/index.html
@@ -119,8 +119,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-container">
-                            <h1>GAMES CONVERSE is <span id="js-rotating">an APP,gaming HUB,hope.</span></h1>
-                            <p class="p-heading p-large">Aria is a top consultancy company specializing in business growth using online marketing and conversion optimization tactics</p>
+                            <h1>Games Converse is <span id="js-rotating">an APP,a gaming HUB,hope.</span></h1>
+                            <p class="p-heading p-large">Have fun and make a difference to the world</p>
                             <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
                         </div>
                     </div> <!-- end of col -->
@@ -138,10 +138,11 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
-                        <h2>We Offer Some Of The Best Business Growth Services In Town</h2>
-                        <p>Launching a new company or developing the market position of an existing one can be quite an overwhelming processs at times.</p>
-                        <p class="testimonial-text">"Our mission here at Aira is to get you through those tough moments relying on our team's expertise in starting and growing companies."</p>
-                        <div class="testimonial-author">Louise Donovan - CEO</div>
+                        <h2>Hope</h2>
+                        <p>Games Converse is a violence-free hosting platform for short mobile games that raise awareness about environmental and 
+                            animal rights issues through the gameplay. </p>
+                        <p class="testimonial-text">"Our mission is to bring hope and reflection on pressing issues such as deforestation, ocean pollution, animal cruelty and such."</p>
+                        <div class="testimonial-author">Nielisson Mendonça - CEO</div>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
