--- a/gc/index.html
+++ b/gc/index.html
@@ -132,22 +132,23 @@
 
 
     <!-- Intro -->
-    <div id="intro" class="basic-1">
+    <div id="intro" class="basic-1">    
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
-                        <h2>Hope</h2>
+                        <h2>How to help our planet by playing a game?</h2>
                         <p>Games Converse is a violence-free hosting platform for short mobile games that raise awareness about environmental and 
-                            animal rights issues through the gameplay. </p>
+                            animal rights issues through the gameplay. Users can play any of the available games and unlock new games by accumulating or buying coins. 
+                            They may also customize their avatar to look stylish and join a healthy competition with friends!</p>
                         <p class="testimonial-text">"Our mission is to bring hope and reflection on pressing issues such as deforestation, ocean pollution, animal cruelty and such."</p>
                         <div class="testimonial-author">Nielisson Mendonça - CEO</div>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/intro-office.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/intro_placeholder.png" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
