--- a/gc/index.html
+++ b/gc/index.html
@@ -170,8 +170,8 @@
                             <i class="fas fa-binoculars fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
-                            <h4 class="card-title">Environment Analysis</h4>
-                            <p>The starting point of any success story is knowing your current position in the business environment</p>
+                            <h4 class="card-title">No advertisements</h4>
+                            <p>Because there is nothing more annoying than spammy ads!</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -183,8 +183,8 @@
                             <i class="fas fa-list-alt fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
-                            <h4 class="card-title">Development Planning</h4>
-                            <p>After completing the environmental analysis the next stage is to design and  plan your development strategy</p>
+                            <h4 class="card-title">Donations to Institutions</h4>
+                            <p>10% of the profit will be converted into donations to a NGO and/or an institution involved in the current cause.</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -196,8 +196,8 @@
                             <i class="fas fa-chart-pie fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
-                            <h4 class="card-title">Execution & Evaluation</h4>
-                            <p>In this phase you will focus on executing the actions plan and evaluating the results after each marketing campaign</p>
+                            <h4 class="card-title">The Causes We Support</h4>
+                            <p>Every 6 months or if the overall goal is reached, we will be supporting a different cause.</p>
                         </div>
                     </div>
                     <!-- end of card -->
