--- a/gc/index.html
+++ b/gc/index.html
@@ -51,7 +51,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a>
+        <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.png" alt="alternative"></a>
         
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -119,7 +119,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-container">
-                            <h1>Games Converse is <span id="js-rotating">an APP,a gaming HUB,hope.</span></h1>
+                            <h1>Games Converse is <span id="js-rotating">an application,a gaming HUB,hope.</span></h1>
                             <p class="p-heading p-large">Have fun and make a difference to the world</p>
                             <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
                         </div>
@@ -167,7 +167,8 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-binoculars fa-stack-1x"></i>
+                           
+                            <img src="images/icons/ad-block.png">
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">No advertisements</h4>
