--- a/gc/index.html
+++ b/gc/index.html
@@ -168,7 +168,7 @@
                         <span class="fa-stack">
                             <span class="hexagon"></span>
                            
-                            <img src="images/icons/ad-block.png">
+                            <img src="images/icons/ad-block.png" height="32px" weight="32px">
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">No advertisements</h4>
