--- a/gc/index.html
+++ b/gc/index.html
@@ -167,8 +167,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                           
-                            <img src="images/icons/ad-block.png" height="32px" weight="32px">
+                            <i class="fas fa-ad"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">No advertisements</h4>
@@ -181,7 +180,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-list-alt fa-stack-1x"></i>
+                            <i class="fas fa-hand-holding-usd"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">Donations to Institutions</h4>
@@ -194,7 +193,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-chart-pie fa-stack-1x"></i>
+                            <i class="fas fa-globe-americas"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">The Causes We Support</h4>
