--- a/gc/index.html
+++ b/gc/index.html
@@ -51,7 +51,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-text page-scroll" href="index.html"><img src="images/logo.png" alt="alternative"></a>
+        <a href="index.html"><img src="images/logo.png" alt="alternative" height="auto" width="64px"></a>
         
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
