--- a/gc/index.html
+++ b/gc/index.html
@@ -166,8 +166,10 @@
                     <!-- Card -->
                     <div class="card">
                         <span class="fa-stack">
-                            <span class="hexagon"></span>
-                            <i class="fas fa-ad"></i>
+                            <span class="hexagon">
+                                <i class="fas fa-ad"></i>
+                            </span>
+                           
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">No advertisements</h4>
