--- a/gc/index.html
+++ b/gc/index.html
@@ -166,10 +166,8 @@
                     <!-- Card -->
                     <div class="card">
                         <span class="fa-stack">
-                            <span class="hexagon">
-                                <i class="fas fa-ad"></i>
-                            </span>
-                           
+                            <span class="hexagon"></span>
+                            <span><i class="fas fa-ad"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">No advertisements</h4>
@@ -182,7 +180,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-hand-holding-usd"></i>
+                            <span><i class="fas fa-hand-holding-usd"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">Donations to Institutions</h4>
@@ -195,7 +193,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-globe-americas"></i>
+                            <span><i class="fas fa-globe-americas"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">The Causes We Support</h4>
