--- a/gc/index.html
+++ b/gc/index.html
@@ -167,7 +167,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <span><i class="fas fa-ad"></i>
+                            <i class="fas fa-ad"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">No advertisements</h4>
@@ -180,7 +180,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <span><i class="fas fa-hand-holding-usd"></i>
+                            <i class="fas fa-hand-holding-usd"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">Donations to Institutions</h4>
@@ -193,7 +193,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <span><i class="fas fa-globe-americas"></i>
+                            <i class="fas fa-globe-americas"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">The Causes We Support</h4>
