--- a/gc/index.html
+++ b/gc/index.html
@@ -167,7 +167,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-ad"></i>
+                            <i class="fas fa-ad fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">No advertisements</h4>
@@ -175,12 +175,12 @@
                         </div>
                     </div>
                     <!-- end of card -->
-
+                 
                     <!-- Card -->
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-hand-holding-usd"></i>
+                            <i class="fas fa-hand-holding-usd fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">Donations to Institutions</h4>
@@ -193,7 +193,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-globe-americas"></i>
+                            <i class="fas fa-globe-americas fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">The Causes We Support</h4>
