--- a/gc/index.html
+++ b/gc/index.html
@@ -193,7 +193,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-globe-americas fa-stack-1x"></i>
+                            <i class="fas fa-globe-africa fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">The Causes We Support</h4>
