--- a/gc/index.html
+++ b/gc/index.html
@@ -167,7 +167,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-ad fa-stack-1x"></i>
+                            <i class="fab fa-adversal fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">No advertisements</h4>
