--- a/gc/index.html
+++ b/gc/index.html
@@ -183,7 +183,7 @@
                             <i class="fas fa-hand-holding-usd fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
-                            <h4 class="card-title">Donations to Institutions</h4>
+                            <h4 class="card-title">Play = Help</h4>
                             <p>10% of the profit will be converted into donations to a NGO and/or an institution involved in the current cause.</p>
                         </div>
                     </div>
