--- a/gc/index.html
+++ b/gc/index.html
@@ -1006,7 +1006,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="text-container about">
-                        <h4>Few Words About Games Converse/h4>
+                        <h4>Few Words About Games Converse</h4>
                         <p class="white">We're passionate about delivering the best business growth services for companies just starting out as startups or industry players that have established their market position a long tima ago.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
