--- a/gc/index.html
+++ b/gc/index.html
@@ -148,7 +148,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/intro_placeholder.png" alt="alternative" height="40%" width="auto">
+                        <img class="img-fluid" src="images/intro_placeholder.png" alt="alternative" height="512px" width="auto">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
