--- a/gc/index.html
+++ b/gc/index.html
@@ -664,7 +664,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">PROJECTS</div>
-                    <h2>Projects That We're Proud Of</h2>
+                    <h2>Causes We Support</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -672,35 +672,35 @@
                     <!-- Filter -->
                     <div class="button-group filters-button-group">
                         <a class="button is-checked" data-filter="*"><span>SHOW ALL</span></a>
-                        <a class="button" data-filter=".design"><span>DESIGN</span></a>
-                        <a class="button" data-filter=".development"><span>DEVELOPMENT</span></a>
-                        <a class="button" data-filter=".marketing"><span>MARKETING</span></a>
+                        <a class="button" data-filter=".humanrights"><span>HUMAN RIGHTS</span></a>
+                        <a class="button" data-filter=".development"><span>ANIMAL RIGHTS</span></a>
+                        <a class="button" data-filter=".marketing"><span>ENVIRONMENTAL ISSUES</span></a>
                         <a class="button" data-filter=".seo"><span>SEO</span></a>
                     </div> <!-- end of button group -->
                     <div class="grid">
-                        <div class="element-item development">
-                            <a class="popup-with-move-anim" href="#project-1"><div class="element-item-overlay"><span>Online Banking</span></div><img src="images/project-1.jpg" alt="alternative"></a>
+                        <div class="element-item humanrights">
+                            <a class="popup-with-move-anim" href="#project-1"><div class="element-item-overlay"><span>Cause 1</span></div><img src="images/project-1.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item development">
-                            <a class="popup-with-move-anim" href="#project-2"><div class="element-item-overlay"><span>Classic Industry</span></div><img src="images/project-2.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-2"><div class="element-item-overlay"><span>Cause 2</span></div><img src="images/project-2.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item design development marketing">
-                            <a class="popup-with-move-anim" href="#project-3"><div class="element-item-overlay"><span>BoomBap Audio</span></div><img src="images/project-3.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-3"><div class="element-item-overlay"><span>Cause 3</span></div><img src="images/project-3.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item design development marketing">
-                            <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>Van Moose</span></div><img src="images/project-4.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>Cause 4</span></div><img src="images/project-4.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item design development marketing seo">
-                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>Joy Moments</span></div><img src="images/project-5.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>Cause 5</span></div><img src="images/project-5.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item design marketing seo">
-                            <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>Spark Events</span></div><img src="images/project-6.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>Cause 6</span></div><img src="images/project-6.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item design marketing">
-                            <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>Casual Wear</span></div><img src="images/project-7.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>Cause 7</span></div><img src="images/project-7.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item design marketing">
-                            <a class="popup-with-move-anim" href="#project-8"><div class="element-item-overlay"><span>Zazoo Apps</span></div><img src="images/project-8.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-8"><div class="element-item-overlay"><span>Cause 8</span></div><img src="images/project-8.jpg" alt="alternative"></a>
                         </div>
                     </div> <!-- end of grid -->
                     <!-- end of filter -->
