--- a/gc/pt.html
+++ b/gc/pt.html
@@ -119,7 +119,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-container">
-                            <h1>Games Converse is <span id="js-rotating">an application,a gaming HUB,hope.</span></h1>
+                            <h1>Games Converse é <span id="js-rotating">um aplicativo,uma plataforma,esperança.</span></h1>
                             <p class="p-heading p-large">Have fun and make a difference to the world</p>
                             <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
                         </div>
@@ -138,7 +138,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
-                        <h2>How to help our planet by playing a game?</h2>
+                        <h2>Como ajudar o planeta jogando video games?</h2>
                         <p>Games Converse is a violence-free hosting platform for short mobile games that raise awareness about environmental and 
                             animal rights issues through the gameplay. Users can play any of the available games and unlock new games by accumulating or buying coins. 
                             They may also customize their avatar to look stylish and join a healthy competition with friends!</p>
@@ -585,59 +585,7 @@
     <!-- end of testimonials -->
 
 
-    <!-- Projects -->
-	<div id="projects" class="filter">
-		<div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">PROJECTS</div>
-                    <h2>Causes We Support</h2>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <!-- Filter -->
-                    <div class="button-group filters-button-group">
-                        <a class="button is-checked" data-filter="*"><span>SHOW ALL</span></a>
-                        <a class="button" data-filter=".humanrights"><span>HUMAN RIGHTS</span></a>
-                        <a class="button" data-filter=".development"><span>ANIMAL RIGHTS</span></a>
-                        <a class="button" data-filter=".marketing"><span>ENVIRONMENTAL ISSUES</span></a>
-                        <a class="button" data-filter=".seo"><span>SEO</span></a>
-                    </div> <!-- end of button group -->
-                    <div class="grid">
-                        <div class="element-item humanrights">
-                            <a class="popup-with-move-anim" href="#project-1"><div class="element-item-overlay"><span>Cause 1</span></div><img src="images/project-1.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item development">
-                            <a class="popup-with-move-anim" href="#project-2"><div class="element-item-overlay"><span>Cause 2</span></div><img src="images/project-2.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item design development marketing">
-                            <a class="popup-with-move-anim" href="#project-3"><div class="element-item-overlay"><span>Cause 3</span></div><img src="images/project-3.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item design development marketing">
-                            <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>Cause 4</span></div><img src="images/project-4.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item design development marketing seo">
-                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>Cause 5</span></div><img src="images/project-5.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item design marketing seo">
-                            <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>Cause 6</span></div><img src="images/project-6.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item design marketing">
-                            <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>Cause 7</span></div><img src="images/project-7.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item design marketing">
-                            <a class="popup-with-move-anim" href="#project-8"><div class="element-item-overlay"><span>Cause 8</span></div><img src="images/project-8.jpg" alt="alternative"></a>
-                        </div>
-                    </div> <!-- end of grid -->
-                    <!-- end of filter -->
-                    
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-		</div> <!-- end of container -->
-    </div> <!-- end of filter -->
-    <!-- end of projects -->
-
+    
 
     <!-- Project Lightboxes -->
     <!-- Lightbox -->
