--- a/gc/STASH.htm
+++ b/gc/STASH.htm
@@ -184,3 +184,113 @@
     </div> <!-- end of container -->
 </div> <!-- end of form-1 -->
 <!-- end of call me -->
+
+
+
+<!-- Projects -->
+<div id="projects" class="filter">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">PROJECTS</div>
+                <h2>Causes We Support</h2>
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <!-- Filter -->
+                <div class="button-group filters-button-group">
+                    <a class="button is-checked" data-filter="*"><span>SHOW ALL</span></a>
+                    <a class="button" data-filter=".humanrights"><span>HUMAN RIGHTS</span></a>
+                    <a class="button" data-filter=".development"><span>ANIMAL RIGHTS</span></a>
+                    <a class="button" data-filter=".marketing"><span>ENVIRONMENTAL ISSUES</span></a>
+                    <a class="button" data-filter=".seo"><span>SEO</span></a>
+                </div> <!-- end of button group -->
+                <div class="grid">
+                    <div class="element-item humanrights">
+                        <a class="popup-with-move-anim" href="#project-1"><div class="element-item-overlay"><span>Cause 1</span></div><img src="images/project-1.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item development">
+                        <a class="popup-with-move-anim" href="#project-2"><div class="element-item-overlay"><span>Cause 2</span></div><img src="images/project-2.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design development marketing">
+                        <a class="popup-with-move-anim" href="#project-3"><div class="element-item-overlay"><span>Cause 3</span></div><img src="images/project-3.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design development marketing">
+                        <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>Cause 4</span></div><img src="images/project-4.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design development marketing seo">
+                        <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>Cause 5</span></div><img src="images/project-5.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design marketing seo">
+                        <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>Cause 6</span></div><img src="images/project-6.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design marketing">
+                        <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>Cause 7</span></div><img src="images/project-7.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design marketing">
+                        <a class="popup-with-move-anim" href="#project-8"><div class="element-item-overlay"><span>Cause 8</span></div><img src="images/project-8.jpg" alt="alternative"></a>
+                    </div>
+                </div> <!-- end of grid -->
+                <!-- end of filter -->
+                
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of container -->
+</div> <!-- end of filter -->
+<!-- end of projects -->
+
+
+
+   <!-- Projects -->
+   <div id="projects" class="filter">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">PROJECTS</div>
+                <h2>Causes We Support</h2>
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <!-- Filter -->
+                <div class="button-group filters-button-group">
+                    <a class="button is-checked" data-filter="*"><span>SHOW ALL</span></a>
+                    <a class="button" data-filter=".humanrights"><span>HUMAN RIGHTS</span></a>
+                    <a class="button" data-filter=".development"><span>ANIMAL RIGHTS</span></a>
+                    <a class="button" data-filter=".marketing"><span>ENVIRONMENTAL ISSUES</span></a>
+                    <a class="button" data-filter=".seo"><span>SEO</span></a>
+                </div> <!-- end of button group -->
+                <div class="grid">
+                    <div class="element-item humanrights">
+                        <a class="popup-with-move-anim" href="#project-1"><div class="element-item-overlay"><span>Cause 1</span></div><img src="images/project-1.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item development">
+                        <a class="popup-with-move-anim" href="#project-2"><div class="element-item-overlay"><span>Cause 2</span></div><img src="images/project-2.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design development marketing">
+                        <a class="popup-with-move-anim" href="#project-3"><div class="element-item-overlay"><span>Cause 3</span></div><img src="images/project-3.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design development marketing">
+                        <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>Cause 4</span></div><img src="images/project-4.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design development marketing seo">
+                        <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>Cause 5</span></div><img src="images/project-5.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design marketing seo">
+                        <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>Cause 6</span></div><img src="images/project-6.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design marketing">
+                        <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>Cause 7</span></div><img src="images/project-7.jpg" alt="alternative"></a>
+                    </div>
+                    <div class="element-item design marketing">
+                        <a class="popup-with-move-anim" href="#project-8"><div class="element-item-overlay"><span>Cause 8</span></div><img src="images/project-8.jpg" alt="alternative"></a>
+                    </div>
+                </div> <!-- end of grid -->
+                <!-- end of filter -->
+                
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of container -->
+</div> <!-- end of filter -->
+<!-- end of projects -->
