--- a/gc/index.html
+++ b/gc/index.html
@@ -224,7 +224,7 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/coming_soon.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/coming_soon.jpg" alt="alternative">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">Seed Bomb</h3>
