--- a/gc/index.html
+++ b/gc/index.html
@@ -832,7 +832,7 @@
                     <div class="text-container">
                         <div class="section-title">CONTACT</div>
                         <h2>Converse with us!</h2>
-                        <p>Use the contact form for any questions, comment and inquiries</p>
+                        <p>Any questions, comment or inquiries?</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="address"><i class="fas fa-map-marker-alt"></i>Paris, France</li>
                             <li><i class="fas fa-envelope"></i><a href="mailto:hey.games.converse@gmail.com">hey.games.converse@gmail.com</a></li>
