--- a/gc/index.html
+++ b/gc/index.html
@@ -224,19 +224,19 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="images/coming_soon.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/illu_kurupir.png" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">Seed Bomb</h3>
-                            <p>Turn-Based Platformer</p>
+                            <h3 class="card-title">Kurupir</h3>
+                            <p>A fun rhythm-based puzzle game</p>
                             <ul class="list-unstyled li-space-lg">
                                 <li class="media">
                                     <i class="fas fa-square"></i>
-                                    <div class="media-body">Environment and competition</div>
+                                    <div class="media-body">Plant trees</div>
                                 </li>
                                 <li class="media">
                                     <i class="fas fa-square"></i>
-                                    <div class="media-body">Designing the marketing plan</div>
+                                    <div class="media-body">Distract the crow and survive!</div>
                                 </li>
                             </ul>
                     
