--- a/gc/index.html
+++ b/gc/index.html
@@ -328,8 +328,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Read Our Customer Testimonials</h2>
-                    <p class="p-heading">Our clients are our partners and we can not imagine a better future for our company without helping them reach their objectives</p>
+                    <h2>Read the Community's Reviews</h2>
+                    <p class="p-heading">Our community is created by the players that keep this project going and we can not imagine a better future for our planet without them</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
