--- a/gc/index.html
+++ b/gc/index.html
@@ -329,7 +329,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Read the Community's Reviews</h2>
-                    <p class="p-heading">Our community is created by the players that keep this project going and we can not imagine a better future for our planet without them</p>
+                    <p class="p-heading">Our community is created by our partners and the players who keep this project going and we can not imagine a better future for our planet without them.</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -343,7 +343,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/testimonial-1.jpg" alt="alternative">
+                                        <img class="card-image" src="images/avatar_unknown.png" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">The guys from Aria helped with getting my business off the ground and turning into a profitable company.</div>
                                             <div class="testimonial-author">Jude Thorn - Founder</div>
