--- a/gc/index.html
+++ b/gc/index.html
@@ -106,6 +106,12 @@
                         <i class="fab fa-twitter fa-stack-1x"></i>
                     </a>
                 </span>
+                <span class="fa-stack">
+                    <a href="https://instagram.com/gamesconverse">
+                        <span class="hexagon"></span>
+                        <i class="fab fa-instagram fa-stack-1x"></i>
+                    </a>
+                </span>
             </span>
         </div>
     </nav> <!-- end of navbar -->
