--- a/gc/index.html
+++ b/gc/index.html
@@ -633,38 +633,34 @@
             <div class="row">
                 <div class="col-lg-5 col-xl-6">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/about.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/illu_impact.png alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-7 col-xl-6">
                     <div class="text-container">
                         <div class="section-title">IMPACT</div>
-                        <h2>We're Passionate About Delivering Growth Services</h2>
-                        <p>Our goal is to provide the right business growth services at the appropriate time so companies can benefit from the created momentum and thrive for a long period of time</p>
+                        <h2>Thanks to our players, we've been making a big difference!</h2>
+                        <p>Our current campaign's goal is to plant 5000 trees in the Amazon rainforest until the end of October of 2021.</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Everything we recommend has direct positive impact</div>
+                                <div class="media-body">Check the area where the trees are being planted</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">You will become an important partner of our company</div>
+                                <div class="media-body">Learn more about the NGO's project.</div>
                             </li>
                         </ul>
 
                         <!-- Counter -->
                         <div id="counter">
                             <div class="cell">
-                                <div class="counter-value number-count" data-count="589">1</div>
+                                <div class="counter-value number-count" data-count="000">1</div>
                                 <div class="counter-info">Trees<br>Planted</div>
                             </div>
                             <div class="cell">
-                                <div class="counter-value number-count" data-count="589">1</div>
-                                <div class="counter-info">Issues<br>Solved</div>
-                            </div>
-                            <div class="cell">
-                                <div class="counter-value number-count" data-count="159">1</div>
-                                <div class="counter-info">Good<br>Reviews</div>
+                                <div class="counter-value number-count" data-count="000">1</div>
+                                <div class="counter-info">App<br>Users</div>
                             </div>
                         </div>
                         <!-- end of counter -->
