--- a/gc/index.html
+++ b/gc/index.html
@@ -303,7 +303,7 @@
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionOne">
                         <div class="accordion-body">
-                            By the end of each month, Games Converse will disclose the profit achieved and the donation's deposit receipt.
+                            By the end of each month, Games Converse will disclose the profit achieved and the donation's deposit receipt. Visit the NGO's website for more information.
                         </div>
                     </div>
                 </div> <!-- end of item -->
@@ -633,7 +633,7 @@
             <div class="row">
                 <div class="col-lg-5 col-xl-6">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/illu_impact.png alt="alternative">
+                        <img class="img-fluid" src="images/illu_impact.png" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-7 col-xl-6">
